--- a/myHero.html
+++ b/myHero.html
@@ -50,10 +50,17 @@
           <h1 class="masthead-heading mb-0">英雄</h1>
           <h2 class="masthead-subheading mb-0">天地英雄气，千秋尚凛然</h2>
           <p>时代需要宣传英雄，英雄需要被历史记录</p>
-          <div class="noExtensionClass" style="display:none" id="noExtension">
+
+          <div class="noExtensionClass"  id="noExtension">
+                使用前请安装 
+                <a target="_blank" href="https://github.com/ChengOrangeJu/WebExtensionWallet">WebExtensionWallet</a> 
+                激活Dapp的功能。移动端请安装<a target="_blank" href="https://nano.nebulas.io/index_cn.html">NAS nano 钱包</a>
+          </div>  
+
+          <!-- <div class="noExtensionClass" style="display:none" id="noExtension">
                     请安装 
             <a target="_blank" href="https://github.com/ChengOrangeJu/WebExtensionWallet">WebExtensionWallet</a> 激活Dapp的功能。
-        </div> 
+        </div>  -->
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
@@ -71,7 +78,9 @@
               <p id="firstFrom" style="display: none;"></p>
               <p id="firstIndex" style="display: none;"></p>
               <p id="firstCallNum"></p>
-              <div class="content_show" style="display: none;">
+              
+              <div class="content_show">
+              <!-- <div class="content_show" style="display: none;"> -->
                 <button type="button" class="btn btn-danger btn-default" onclick="call('firstFrom','firstIndex')">为他打call</button>
           </div>
         </div>
@@ -87,7 +96,9 @@
               <p id="secondFrom" style="display: none;">></p>
               <p id="secondIndex" style="display: none;"></p>
               <p id="secondCallNum"></p>
-              <div class="content_show" style="display: none;">
+
+              <div class="content_show">
+              <!-- <div class="content_show" style="display: none;"> -->
                 <button type="button" class="btn btn-danger btn-default" onclick="call('secondFrom','secondIndex')">为他打call</button>
           </div>
         </div>
@@ -103,7 +114,9 @@
               <p id="thirdFrom" style="display: none;">></p>
               <p id="thirdIndex" style="display: none;"></p>
               <p id="thirdCallNum"></p>
-              <div class="content_show" style="display: none;">
+
+              <div class="content_show">
+              <!-- <div class="content_show" style="display: none;"> -->
                 <button type="button" class="btn btn-danger btn-default" onclick="call('thirdFrom','thirdIndex')">为他打call</button>
           </div>
         </div>
@@ -119,7 +132,9 @@
               <p id="fourthFrom" style="display: none;">></p>
               <p id="fourthIndex" style="display: none;"></p>
               <p id="fourthCallNum"></p>
-              <div class="content_show" style="display: none;">
+
+              <div class="content_show">
+              <!-- <div class="content_show" style="display: none;"> -->
                 <button type="button" class="btn btn-danger btn-default" onclick="call('fourthFrom','fourthIndex')">为他打call</button>
           </div>
         </div>
@@ -135,7 +150,9 @@
               <p id="fifthFrom" style="display: none;">></p>
               <p id="fifthIndex" style="display: none;"></p>
               <p id="fifthCallNum"></p>
-              <div class="content_show" style="display: none;">
+
+              <div class="content_show">
+              <!-- <div class="content_show" style="display: none;"> -->
                 <button type="button" class="btn btn-danger btn-default" onclick="call('fifthFrom','fifthIndex')">为他打call</button>
           </div>
         </div>
@@ -152,7 +169,8 @@
     </div>
     <br>
 
-  <div class="content_show" style="display: none;">
+  <div class="content_show">
+  <!-- <div class="content_show" style="display: none;"> -->
       <div class="container">
     <div class="row clearfix">
       <div class="col-md-12 column">
@@ -226,7 +244,7 @@
 
       neb.setRequest(new nebulas.HttpRequest("https://mainnet.nebulas.io"));
       // neb.setRequest(new nebulas.HttpRequest("https://testnet.nebulas.io"));
-
+      var nasApi = neb.api;
 
       function getNewMessage(offset) {
         var from = Account.NewAccount().getAddressString();
@@ -295,19 +313,29 @@
         var name = document.getElementById("myHeroName").value;
         var message = document.getElementById("myHeroStory").value;
         var callArgs = "[\"" + name + "\",\"" + message + "\"]";
-        var options = {
-          //callback 是交易查询服务器地址,
-          callback : NebPay.config.mainnetUrl     //在主网查询
-          // callback : NebPay.config.testnetUrl        //在测试网查询
-        }
 
-        //发起交易(发起智能合约调用)
-        serialNumber = nebPay.call(to, value, callFunction, callArgs, options);
+        serialNumber = nebPay.call(to, value, callFunction, callArgs, {
+          qrcode: {
+              showQRCode: true
+          },
+          callback: NebPay.config.mainnetUrl, //在主网查询(默认值)
+          // callback: NebPay.config.testnetUrl,    //在测试网查询
+          listener: listenerMessage  //set listener for extension transaction result
+      });
 
-        //设置定时查询结果
-        intervalQuery = setInterval(function() {
-          funcIntervalQuery();
-        }, 10000);//建议查询频率10-15s,因为星云链出块时间为15s,并且查询服务器限制每分钟最多查询10次。
+        // var options = {
+        //   //callback 是交易查询服务器地址,
+        //   callback : NebPay.config.mainnetUrl     //在主网查询
+        //   // callback : NebPay.config.testnetUrl        //在测试网查询
+        // }
+
+        // //发起交易(发起智能合约调用)
+        // serialNumber = nebPay.call(to, value, callFunction, callArgs, options);
+
+        // //设置定时查询结果
+        // intervalQuery = setInterval(function() {
+        //   funcIntervalQuery();
+        // }, 10000);//建议查询频率10-15s,因为星云链出块时间为15s,并且查询服务器限制每分钟最多查询10次。
       })
 
 
@@ -325,66 +353,85 @@
         var value = "0";
         var callFunction = "setVote";
         var callArgs = "[\"" + address + "\",\"" + messageIndex + "\"]";
-        var options = {
-          //callback 是交易查询服务器地址,
-          callback : NebPay.config.mainnetUrl     //在主网查询
-          // callback : NebPay.config.testnetUrl        //在测试网查询
-        }
 
-        //发起交易(发起智能合约调用)
-        serialNumber = nebPay.call(to, value, callFunction, callArgs, options);
-
-        //设置定时查询结果
-        intervalQuery = setInterval(function() {
-          funcIntervalQuery();
-        }, 10000);//建议查询频率10-15s,因为星云链出块时间为15s,并且查询服务器限制每分钟最多查询10次。
+        serialNumber = nebPay.call(to, value, callFunction, callArgs, {
+          qrcode: {
+              showQRCode: true
+          },
+          callback: NebPay.config.mainnetUrl, //在主网查询(默认值)
+          // callback: NebPay.config.testnetUrl,    //在测试网查询
+          listener: listener  //set listener for extension transaction result
+      });
       }
 
-      //查询交易结果。queryPayInfo 返回的是一个 Promise 对象
-      function funcIntervalQuery() {
+      function listener(resp) {
+      console.log("listener resp: " + JSON.stringify(resp))
+      var result = resp;
+      onrefreshClick(result["txhash"])
+    }
 
-        var options = {
-            //callback 是交易查询服务器地址,
-            // callback : testnetUrl //测试网路查询
-            callback: NebPay.config.mainnetUrl  //在主网查询(默认值)
-            // callback: NebPay.config.testnetUrl     //在测试网查询
-        }
-
-        //queryPayInfo的options参数用来指定查询交易的服务器地址,(如果是主网可以忽略,因为默认服务器是在主网查询)
-        nebPay.queryPayInfo(serialNumber, options)  //search transaction result from server (result upload to server by app)
-          .then(function(resp){
-            console.log("tx result: " + resp);
-            var respObject = JSON.parse(resp)
-            //code==0 交易发送成功,status==交易已被打包上链
-            if (respObject.code === 0 && respObject.data.status === 1) {
-              //交易成功,处理后续任务...
-              console.log("交易成功,处理后续任务...");
-              clearInterval(intervalQuery)  //清楚定时查询
+    function onrefreshClick(txhash) {
+      nasApi.getTransactionReceipt({hash: txhash}).then(function(receipt) {
+            console.log("status = " + receipt.status);
+            if (receipt.status == 1) {
+            console.log("交易成功,处理后续任务...");
+              clearInterval(intervalQuery)  //清除定时查询
+              alert("打call成功");
+            } else {
+              intervalQuery = setTimeout(() => {
+                onrefreshClick(txhash);
+            }, 1000);    //建议查询频率10-15s,因为星云链出块时间为15s,并且查询服务器限制每分钟最多查询10次。
             }
-          })
-          .catch(function(err) {
-            console.log(err);
-          })
-      } 
+        });
+    }
 
-      // function funcIntervalQuery2(txHash, resolve, reject) {
-        
-      //     // var neburl = "https://mainnet.nebulas.io";
-      //     var neburl = "https://testnet.nebulas.io";
-      //     axios.post(neburl + "/v1/user/getTransactionReceipt", { hash: txHash })
-      //         .then(d => {
-      //             if (d.data && d.data.result.execute_result !== "") {
-      //                 resolve(d.data.result);
-      //                 console.log("tx result: " + d.data.result);
-      //             } else if (d.data.status === 0) {
-      //                 reject({ data: d.data, queryReturn: true });
-      //             } else {
-      //                 reject({ data: d.data, queryReturn: false });
-      //             }
-      //         });
-      // }
+    function listenerMessage(resp) {
+      console.log("listener resp: " + JSON.stringify(resp))
+      var result = resp;
+      onrefreshMessage(result["txhash"])
+    }
+
+    function onrefreshMessage(txhash) {
+      nasApi.getTransactionReceipt({hash: txhash}).then(function(receipt) {
+          if (receipt.status == 1) {
+            console.log("交易成功,处理后续任务...");
+            clearInterval(intervalQuery); //清除定时查询
+            alert("记录成功");
+          } else {
+            intervalQuery = setTimeout(() => {
+              onrefreshMessage(txhash);
+            }, 1000); //建议查询频率10-15s,因为星云链出块时间为15s,并且查询服务器限制每分钟最多查询10次。
+          }
+      });
+    }
 
 
+      //查询交易结果。queryPayInfo 返回的是一个 Promise 对象
+      // function funcIntervalQuery() {
+
+      //   var options = {
+      //       //callback 是交易查询服务器地址,
+      //       // callback : testnetUrl //测试网路查询
+      //       callback: NebPay.config.mainnetUrl  //在主网查询(默认值)
+      //       // callback: NebPay.config.testnetUrl     //在测试网查询
+      //   }
+
+      //   //queryPayInfo的options参数用来指定查询交易的服务器地址,(如果是主网可以忽略,因为默认服务器是在主网查询)
+      //   nebPay.queryPayInfo(serialNumber, options)  //search transaction result from server (result upload to server by app)
+      //     .then(function(resp){
+      //       console.log("tx result: " + resp);
+      //       var respObject = JSON.parse(resp)
+      //       //code==0 交易发送成功,status==交易已被打包上链
+      //       if (respObject.code === 0 && respObject.data.status === 1) {
+      //         //交易成功,处理后续任务...
+      //         console.log("交易成功,处理后续任务...");
+      //         clearInterval(intervalQuery)  //清楚定时查询
+      //       }
+      //     })
+      //     .catch(function(err) {
+      //       console.log(err);
+      //     })
+      // } 
 
     </script>
 
