--- a/myHero.html
+++ b/myHero.html
@@ -315,9 +315,9 @@
         var callArgs = "[\"" + name + "\",\"" + message + "\"]";
 
         serialNumber = nebPay.call(to, value, callFunction, callArgs, {
-          qrcode: {
-              showQRCode: true
-          },
+          // qrcode: {
+          //     showQRCode: true
+          // },
           callback: NebPay.config.mainnetUrl, //在主网查询(默认值)
           // callback: NebPay.config.testnetUrl,    //在测试网查询
           listener: listenerMessage  //set listener for extension transaction result
@@ -355,9 +355,9 @@
         var callArgs = "[\"" + address + "\",\"" + messageIndex + "\"]";
 
         serialNumber = nebPay.call(to, value, callFunction, callArgs, {
-          qrcode: {
-              showQRCode: true
-          },
+          // qrcode: {
+          //     showQRCode: true
+          // },
           callback: NebPay.config.mainnetUrl, //在主网查询(默认值)
           // callback: NebPay.config.testnetUrl,    //在测试网查询
           listener: listener  //set listener for extension transaction result
