--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div>
-    </section>
+          </section>
 
     <section>
       <div class="container">
@@ -298,7 +298,15 @@
       function listener(resp) {
         console.log("listener resp: " + JSON.stringify(resp))
         var result = resp;
-        onrefreshClick(result["txhash"])
+
+        var errorCode = JSON.stringify(resp).search("Error")
+        if (errorCode == 1) {
+          alert("Error: Transaction rejected by user");
+        } else {
+          onrefreshClick(result["txhash"])
+        }
+        
+        // onrefreshClick(result["txhash"])
     }
 
     function onrefreshClick(txhash) {
