--- a/index.html
+++ b/index.html
@@ -58,13 +58,6 @@
                 激活Dapp的功能。移动端请安装<a target="_blank" href="https://nano.nebulas.io/index_cn.html">NAS nano 钱包</a>
           </div>  
 
-<!--           <div class="noExtensionClass" style="display:none" id="noExtension">
-                    请安装 
-            <a target="_blank" href="https://github.com/ChengOrangeJu/WebExtensionWallet">WebExtensionWallet</a> 激活Dapp的功能。
-        </div>   -->
-
-
-
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
@@ -90,7 +83,7 @@
 
               <div class="content_show">
               <!-- <div class="content_show" style="display: none;"> -->
-                <button type="button" class="btn btn-danger btn-default" onclick="call('firstIndex')">为他打call</button>
+                <button type="button" class="btn btn-danger btn-default" onclick="call('firstIndex')" id="firstCallButton" style="display: none;">为他打call</button>
               </div>
             </div>
           </div>
@@ -115,7 +108,7 @@
 
               <div class="content_show">
               <!-- <div class="content_show" style="display: none;"> -->
-                <button type="button" class="btn btn-danger btn-default" onclick="call('secondIndex')">为他打call</button>
+                <button type="button" class="btn btn-danger btn-default" onclick="call('secondIndex')" id="secondCallButton" style="display: none;">为他打call</button>
               </div>
             </div>
           </div>
@@ -140,7 +133,7 @@
 
               <div class="content_show">
               <!-- <div class="content_show" style="display: none;"> -->
-                <button type="button" class="btn btn-danger btn-default" onclick="call('thirdIndex')">为他打call</button>
+                <button type="button" class="btn btn-danger btn-default" onclick="call('thirdIndex')" id="thirdCallButton" style="display: none;">为他打call</button>
               </div>
             </div>
           </div>
@@ -165,7 +158,7 @@
 
               <div class="content_show">
               <!-- <div class="content_show" style="display: none;"> -->
-                <button type="button" class="btn btn-danger btn-default" onclick="call('fourthIndex')">为他打call</button>
+                <button type="button" class="btn btn-danger btn-default" onclick="call('fourthIndex')" id="fourthCallButton" style="display: none;">为他打call</button>
               </div>
             </div>
           </div>
@@ -180,8 +173,6 @@
          <div align="center">
           <img src="./img/logo_white.png" width="180" height="60" >
          </div>
-<!--        <div class="m-0 text-center text-white small">用星云链记录和宣传英雄事迹 <a href="mailto:rickliu414149871@gmail.com">联系我</a></div> 
- -->
         <p class="m-0 text-center text-white small">Copyright © 2018 英雄 <a href="mailto:rickliu414149871@gmail.com">联系我</a></p>
       </div>
     </footer>
@@ -195,11 +186,11 @@
 
     <!-- 判断是否安装钱包 -->
     <script type="text/javascript">
-      if (typeof(webExtensionWallet) == 'undefined') {
-        $(".noExtensionClass").show();
-      } else {
-        $(".content_show").show();
-      }
+      // if (typeof(webExtensionWallet) == 'undefined') {
+      // $(".noExtensionClass").show();
+      // } else {
+      //   $(".content_show").show();
+      // }
 
       window.onload = function() {
         getMessage();
@@ -305,8 +296,6 @@
         } else {
           onrefreshClick(result["txhash"])
         }
-        
-        // onrefreshClick(result["txhash"])
     }
 
     function onrefreshClick(txhash) {
@@ -316,6 +305,7 @@
             console.log("交易成功,处理后续任务...");
               clearInterval(intervalQuery)  //清除定时查询
               alert("打call成功");
+              getMessage();
             } else if (receipt.status == 0) {
                 clearInterval(intervalQuery)  //清除定时查询
                 alert("失败");
@@ -329,6 +319,6 @@
 
     </script>
 
-
+  <script src="./js/app.js"></script>
   </body>
 </html>
